--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@wix/sdk": "^1.12.12",
     "@wix/stores": "^1.0.179",
+    "isomorphic-dompurify": "^2.14.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.2",
     "react": "^18",
