--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@wix/ecom": "^1.0.693",
     "@wix/sdk": "^1.12.12",
     "@wix/stores": "^1.0.179",
     "isomorphic-dompurify": "^2.14.0",
