--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@wix/stores": "^1.0.179",
     "isomorphic-dompurify": "^2.14.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.428.0",
     "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
